deploy: 363fd36d83bfa32d829ae39d91f577d88d7d3a04

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ English
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.53d98202560a829a2e7d7649499cc356.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.fd8e574b26914d64d3fa6f2291381c19.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -77,7 +77,7 @@ Lean More <i class="fas fa-arrow-alt-circle-right ml-2"></i>
 <a class="btn btn-lg btn-secondary mr-3 mb-4" href=https://github.com/klts-io>
 Source Code <i class="fab fa-github ml-2"></i>
 </a>
-<p class="lead mt-5">Long term support of Kubernetes is available here</p>
+<p class="lead mt-5"><strong>Long term support of Kubernetes is available here</strong> </p>
 <a class="btn btn-link text-info" href=#td-block-1 aria-label="Read more"><i class="fa fa-chevron-circle-down" style=font-size:400%></i></a>
 </div>
 </div>
@@ -107,8 +107,7 @@ complete Kubernetes environment and dependencies</p>
 DaoCloud Community
 </h4>
 <p class=mb-0>
-<p>DaoCloud provides open source toolkits for image verification, interactive UI design library, and document management system.</p>
-<p>Please follow this space for updates!</p>
+<p>We provide open source toolkits for image verification, interactive UI design, document management, and more.</p>
 </p>
 <p><a href=https://github.com/daocloud>Read more …</a></p>
 </div>
@@ -133,7 +132,7 @@ are always welcome!</p>
 Learn more about DaoCloud
 </h4>
 <p class=mb-0>
-<p>A innovative leader of enterprise-level PaaS provider in China</p>
+<p>A innovative leader of enterprise-level PaaS provider</p>
 </p>
 <p><a href=https://www.daocloud.io/>Read more …</a></p>
 </div>
