--- a/about/index.html
+++ b/about/index.html
@@ -54,7 +54,7 @@ English
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.53d98202560a829a2e7d7649499cc356.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.fd8e574b26914d64d3fa6f2291381c19.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -85,7 +85,7 @@ English
 <p>Kubernetes being an enterprise infrastructure, you should not use a version that is no longer maintained.
 KLTS maintains the versions that Kubernetes community drops officially. Simply upgrading to the KLTS patch
 version can enable you avoid bugs caused by newer official versions of Kubernetes,
-no any worry about introducing features that are not currently available, and your infrastructure based on Kubernetes will be more stable.</p>
+no worry about introducing features that are not currently available, and your infrastructure based on Kubernetes will be more stable.</p>
 </span>
 </div>
 </section>
