--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -19,7 +19,8 @@ linkTitle = "KLTS.io"
 
 
 {{% blocks/lead color="primary" %}}
-KLTS offers production distributions for earlier versions of Kubernetes, which are fully open source distributions that include
+KLTS offers production distributions for earlier versions of Kubernetes, which are fully open source distributions that
+include
 complete Kubernetes environment and dependencies
 {{% /blocks/lead %}}
 
@@ -31,33 +32,14 @@ We provide open source toolkits for image verification, interactive UI design, d
 
 
 {{% blocks/feature icon="fab fa-github" title="Welcome to join KLTS!" url="https://github.com/klts-io" %}}
-We do a {{< link text="Pull Request" url="https://github.com/klts-io/website/pulls" >}} contributions workflow on **GitHub**. New users
+We do a {{< link text="Pull Request" url="https://github.com/klts-io/website/pulls" >}} contributions workflow on
+**GitHub**. New users
 are always welcome!
 {{% /blocks/feature %}}
 
 
 {{% blocks/feature icon="fab fa-twitter" title="Learn more about DaoCloud" url="https://www.daocloud.io/" %}}
 A innovative leader of enterprise-level PaaS provider
-{{% /blocks/feature %}}
-
-
-{{< /blocks/section >}}
-
-
-
-{{< blocks/section >}}
-{{% blocks/feature icon="fab fa-app-store-ios" title="Preparation" url="/en/docs/pre-install/" %}}
-Prepare your environment for installation.
-{{% /blocks/feature %}}
-
-
-{{% blocks/feature icon="fab fa-github" title="Installation" url="/en/docs/install/" %}}
-Describes the procedure to install a Kubernetes version.
-{{% /blocks/feature %}}
-
-
-{{% blocks/feature icon="fab fa-twitter" title="After your installation" url="/en/docs/post-install/" %}}
-Describes those jobs you need perform after installation.
 {{% /blocks/feature %}}
 
 
