--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ English
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.03f65747bce2d0ba7c9a857772b99dbf.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.006a4f2a511813d065713d07ba39a34b.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
@@ -90,7 +90,8 @@ Source Code <i class="fab fa-github ml-2"></i>
 <section class="row td-box td-box--primary position-relative td-box--gradient td-box--height-auto">
 <div class="container text-center td-arrow-down">
 <span class="h4 mb-0">
-<p>KLTS offers production distributions for earlier versions of Kubernetes, which are fully open source distributions that include
+<p>KLTS offers production distributions for earlier versions of Kubernetes, which are fully open source distributions that
+include
 complete Kubernetes environment and dependencies</p>
 </span>
 </div>
@@ -119,7 +120,8 @@ DaoCloud Community
 Welcome to join KLTS!
 </h4>
 <p class=mb-0>
-<p>We do a <a href=https://github.com/klts-io/website/pulls target=_blank>Pull Request</a> contributions workflow on <strong>GitHub</strong>. New users
+<p>We do a <a href=https://github.com/klts-io/website/pulls target=_blank>Pull Request</a> contributions workflow on
+<strong>GitHub</strong>. New users
 are always welcome!</p>
 </p>
 <p><a href=https://github.com/klts-io>Read more …</a></p>
@@ -135,49 +137,6 @@ Learn more about DaoCloud
 <p>A innovative leader of enterprise-level PaaS provider</p>
 </p>
 <p><a href=https://www.daocloud.io/>Read more …</a></p>
-</div>
-</div>
-</div>
-</section>
-<a id=td-block-3 class=td-offset-anchor></a>
-<section class="row td-box td-box--3 td-box--gradient td-box--height-auto">
-<div class=col>
-<div class=row>
-<div class="col-lg-4 mb-5 mb-lg-0 text-center">
-<div class="mb-4 h1">
-<i class="fab fa-app-store-ios"></i>
-</div>
-<h4 class=h3>
-Preparation
-</h4>
-<p class=mb-0>
-<p>Prepare your environment for installation.</p>
-</p>
-<p><a href=/en/docs/pre-install/>Read more …</a></p>
-</div>
-<div class="col-lg-4 mb-5 mb-lg-0 text-center">
-<div class="mb-4 h1">
-<i class="fab fa-github"></i>
-</div>
-<h4 class=h3>
-Installation
-</h4>
-<p class=mb-0>
-<p>Describes the procedure to install a Kubernetes version.</p>
-</p>
-<p><a href=/en/docs/install/>Read more …</a></p>
-</div>
-<div class="col-lg-4 mb-5 mb-lg-0 text-center">
-<div class="mb-4 h1">
-<i class="fab fa-twitter"></i>
-</div>
-<h4 class=h3>
-After your installation
-</h4>
-<p class=mb-0>
-<p>Describes those jobs you need perform after installation.</p>
-</p>
-<p><a href=/en/docs/post-install/>Read more …</a></p>
 </div>
 </div>
 </div>
