--- a/zh/about/index.html
+++ b/zh/about/index.html
@@ -41,6 +41,9 @@
 <a class="nav-link active" href=/zh/about/><span class=active>关于</span></a>
 </li>
 <li class="nav-item mr-4 mb-2 mb-lg-0">
+<a class=nav-link href=/zh/blog/><span>博客</span></a>
+</li>
+<li class="nav-item mr-4 mb-2 mb-lg-0">
 <a class=nav-link href=/zh/docs/><span>文档</span></a>
 </li>
 <li class="nav-item dropdown mr-4 d-none d-lg-block">
@@ -54,7 +57,7 @@
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.7079cb01918001e6c31f25bbfbe8da99.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.cc66e04869ce79df8209d3d9eb68b160.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
