--- a/404.html
+++ b/404.html
@@ -42,6 +42,9 @@
 <a class=nav-link href=/blog/><span>Blog</span></a>
 </li>
 <li class="nav-item mr-4 mb-2 mb-lg-0">
+<a class=nav-link href=/case-studies/><span>Case Studies</span></a>
+</li>
+<li class="nav-item mr-4 mb-2 mb-lg-0">
 <a class=nav-link href=/docs/><span>Document</span></a>
 </li>
 <li class="nav-item dropdown mr-4 d-none d-lg-block">
@@ -55,7 +58,7 @@ English
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.cc66e04869ce79df8209d3d9eb68b160.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.5d476899b13028496ce9f343c91400ba.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
