--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -43,6 +43,9 @@
 <a class=nav-link href=/blog/><span>Blog</span></a>
 </li>
 <li class="nav-item mr-4 mb-2 mb-lg-0">
+<a class="nav-link active" href=/case-studies/><span class=active>Case Studies</span></a>
+</li>
+<li class="nav-item mr-4 mb-2 mb-lg-0">
 <a class=nav-link href=/docs/><span>Document</span></a>
 </li>
 <li class="nav-item dropdown mr-4 d-none d-lg-block">
@@ -56,7 +59,7 @@ English
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.e2901928df1480a22b457edeefba4f2d.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; Search this site…" aria-label="Search this site…" autocomplete=off data-offline-search-index-json-src=/offline-search-index.d012a0cde4973cb684c87b14631b77af.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 </header>
