--- a/zh/case-studies/daocloud/index.html
+++ b/zh/case-studies/daocloud/index.html
@@ -48,6 +48,9 @@
 <li class="nav-item mr-4 mb-2 mb-lg-0">
 <a class=nav-link href=/zh/docs/><span>文档</span></a>
 </li>
+<li class="nav-item mr-4 mb-2 mb-lg-0">
+<a class="nav-link active" href=/zh/case-studies/><span class=active>用户案例</span></a>
+</li>
 <li class="nav-item dropdown mr-4 d-none d-lg-block">
 <a class="nav-link dropdown-toggle" href=# id=navbarDropdown role=button data-toggle=dropdown aria-haspopup=true aria-expanded=false>
 中文 Chinese
@@ -59,7 +62,7 @@
 </ul>
 </div>
 <div class="navbar-nav d-none d-lg-block">
-<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.e2901928df1480a22b457edeefba4f2d.json data-offline-search-base-href=/ data-offline-search-max-results=10>
+<input type=search class="form-control td-search-input" placeholder="&#xf002; 站内搜索…" aria-label=站内搜索… autocomplete=off data-offline-search-index-json-src=/offline-search-index.d012a0cde4973cb684c87b14631b77af.json data-offline-search-base-href=/ data-offline-search-max-results=10>
 </div>
 </nav>
 <meta http-equiv=refresh content="0; URL='https://www.daocloud.io/'">
